# bibnumber

./: .gitignore  CMakeLists.txt
bibnumber/: textdetection.cpp  textrecognition.cpp  train.cpp
